# slides2vid

./: README.md  pyproject.toml
data/: sample2.pptx
src/: main.py  video.py
src/slides2vid/: core.py  main.py  slides.py  video.py
test/: test_generation.py
