[project]
name = "slides2vid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "gtts>=2.5.4",
    "pdf2image>=1.17.0",
    "python-pptx>=1.0.2",
    "returns>=0.26.0",
]



[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
